--- a/lawliet/packages.config
+++ b/lawliet/packages.config
@@ -27,6 +27,8 @@
   <package id="Microsoft.Owin" version="4.1.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Cors" version="4.1.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.1.1" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security" version="4.1.1" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.OAuth" version="4.1.1" targetFramework="net472" />
   <package id="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" version="1.10.9" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
